--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,19 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <h1>
+<div>
+  <section class="grid-container">
+  <h1 class="header">
     Welcome to {{ title }}!
   </h1>
-  <router-outlet></router-outlet>
-  <ul>
+
+  <ul class="nav">
     <li><a routerLink="/home">Home</a></li>
     <li><a routerLink="/regions">Regions Picker</a></li>
-
   </ul>
+    <div class="main">
+    <router-outlet></router-outlet>
+    </div>
+    <div class="foot">footer</div>
+  </section>
 </div>
 
 
