--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,7 @@
   <ul class="nav">
     <li><a routerLink="/home">Home</a></li>
     <li><a routerLink="/regions">Regions Picker</a></li>
+    <li><a routerLink="/items">Items Hub Pricing</a></li>
   </ul>
     <div class="main">
     <router-outlet></router-outlet>
