--- a/src/styles.css
+++ b/src/styles.css
@@ -57,3 +57,20 @@ ul li{
   grid-column-start: 1;
   grid-row-start: 2;
 }
+.gridc_itemsByGroup{
+  display: grid;
+  grid-template-columns: 20% 20% 20% 20% 20%;
+  gird-template-rows: 80px auto;
+}
+
+.itemsByCategory {
+  grid-column: 1/1;
+
+}
+.itemsByGroup {
+  grid-column: 2;
+
+}
+.itemsByType{
+  grid-column: 3;
+}
