--- a/src/app/items-by-group/items-by-group.component.html
+++ b/src/app/items-by-group/items-by-group.component.html
@@ -20,7 +20,7 @@
     </ul>
 
   </div>
-  <div class="itemsByType itesm">
+  <div class="itemsByType items">
     <ul *ngFor="let t of types" [class.selected]="t === selectedType" (click)="onSelectType(t)">
       <li>
         {{t.name}}
@@ -42,26 +42,29 @@
         <th class="price">Rens price</th>
         <th class="price">Hek price </th>
         <th class="price">Action</th>
-        <th class="price">Alerts</th>
+        <!--<th class="price">Alerts</th>-->
         <!--
                                 <td class="price">Tash-Murkon price </td>
                                 <td class="price">Oursulaert price </td>
         -->
 
       </tr>
-      <tr  *ngFor="let it of selItemTypes" [class.itemselected]="item === selectedItem" (click)="onRemoveItem(it)">
-        <td class="image"> <img src = "{{it.type.icon.href}}" class="image">  </td>
-        <td> {{it.type.name}} </td>
+      <tr  *ngFor="let it of tradeItemPriceList" [class.itemselected]="it === selectedItem" (click)="onRemoveItem(it)">
+
+        <td class="image"> <img src = "https://imageserver.eveonline.com/Type/{{it.item.type_id}}_32.png" class="image">  </td>
+        <td> {{ it.item.name }} </td>
         <td class="makeroom">  </td>
         <td class="bomtext" alt="bom"> <img src="assets/images/bom.png" alt="bom"> </td>
 
-        <td class="price">{{it.Jitaprice | mPipe}} </td>
-        <td class="price">{{it.Amarrprice | mPipe}} </td>
-        <td class="price">{{it.Dodixieprice | mPipe}} </td>
-        <td class="price">{{it.Rensprice | mPipe}} </td>
-        <td class="price">{{it.Hekprice | mPipe}} </td>
+        <td class="price">{{it.jitaPrice | mPipe}} </td>
+        <td class="price">{{it.amarrPrice | mPipe}} </td>
+        <td class="price">{{it.dodixiePrice | mPipe}} </td>
+        <td class="price">{{it.rensPrice | mPipe}} </td>
+        <td class="price">{{it.hekPrice | mPipe}} </td>
         <td class="price"><button id="remove" class="btn">Remove</button></td>
-        <td class="price"><button id="addAlert" class="btn">Add Alert</button></td>
+        <!--<td>{{it.item.graphic_id}}</td>-->
+        <!--<td class="price"><button id="addAlert" class="btn">Add Alert</button></td>-->
+
         <!--   <td class="price">{{it.Tashprice | moneyPipe}} </td>
            <td class="price">{{it.Ourprice | moneyPipe}} </td>-->
       </tr>
