added developer guide page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,7 @@
     <li><a routerLink="/home">Home</a></li>
     <li><a routerLink="/regions">Regions Picker</a></li>
     <li><a routerLink="/items">Items Hub Pricing</a></li>
+    <li><a routerLink="/develop">developer guide</a></li>
   </ul>
     <div class="main">
     <router-outlet></router-outlet>
