--- a/src/app/items-by-group/items-by-group.component.html
+++ b/src/app/items-by-group/items-by-group.component.html
@@ -29,6 +29,7 @@
   </div>
 
   <div class="itemsByPrice">
+    <div class="btn" (click)="refreshList()">refresh list</div>
     <table class="itemtable">
       <tr>
         <th>Img</th>
