--- a/src/app/items-by-group/items-by-group.component.css
+++ b/src/app/items-by-group/items-by-group.component.css
@@ -100,3 +100,29 @@
 .alerttext {
   color: #BD0913
 }
+.btn {
+  background: #242b30;
+  background-image: -webkit-linear-gradient(top, #242b30, #20292e);
+  background-image: -moz-linear-gradient(top, #242b30, #20292e);
+  background-image: -ms-linear-gradient(top, #242b30, #20292e);
+  background-image: -o-linear-gradient(top, #242b30, #20292e);
+  background-image: linear-gradient(to bottom, #242b30, #20292e);
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  border-radius: 6px;
+  font-family: Arial;
+  color: #a090f0;
+  font-size: 9px;
+  padding: 3px 3px 3px 3px;
+  text-decoration: none;
+}
+
+.btn:hover {
+  background: #000000;
+  background-image: -webkit-linear-gradient(top, #000000, #111111);
+  background-image: -moz-linear-gradient(top, #000000, #111111);
+  background-image: -ms-linear-gradient(top, #000000, #111111);
+  background-image: -o-linear-gradient(top, #000000, #111111);
+  background-image: linear-gradient(to bottom, #000000, #111111);
+  text-decoration: none;
+}
