--- a/src/app/develop/develop.component.html
+++ b/src/app/develop/develop.component.html
@@ -4,6 +4,10 @@
   <li><a href="https://esi.tech.ccp.is/ui/" target="_blank"> ESI </a></li>
     <li><a href="http://json2ts.com/" target="_blank"> json to typescript </a></li>
 
+    <li><a href="https://stackblitz.com/">stack blitz (place for samples)</a></li>
+    <li>Interesting Notes</li>
+<li <a href="https://www.thepolyglotdeveloper.com/2017/03/javascript-libraries-in-a-typescript-application-revisited/">  reference javascript libraries with ts</li>
+
 </ul>
 </div>
 
