--- a/src/app/items-by-group/items-by-group.component.css
+++ b/src/app/items-by-group/items-by-group.component.css
@@ -1,9 +1,31 @@
 
+.arrow{
+  font-family: "Wingdings 3";
+padding-right: 4px;
+}
 
 .selected {
-  background-color: black !important;
+
   color: red;
 }
+
+.groups{
+  height: auto;
+  overflow: visible;
+  font-size: 12;
+
+  padding: 0 0 1em 12px;
+}
+.groups li{
+  border-radius: 4px;
+  color: #b8af30;
+}
+.groups li span:hover {
+  color: #c934f9;
+
+}
+
+
 .items {
   margin: 0 0 2em 0;
   list-style-type: none;
@@ -11,26 +33,26 @@
   width: 15em;
   font-family: Tahoma;
   font-size: 14;
-  max-height: 800px;
-  overflow: auto;
+  overflow: visible;
+  height: auto;
 }
 .items li {
   cursor: pointer;
   position: relative;
   left: 0;
   background-color: transparent;
-  height: 1.6em;
+  height: auto;
   border-radius: 4px;
 }
 
-.items li.selected:hover {
-  background-color: #396763 !important;
-  color: #c0c9c7;
+
+.items li span:hover {
+  color: #c934f9;
+
 }
-.items li:hover {
-  color: #f0f9c7;
-  background-color: #396763;
-}
+
+
+
 .items .text {
   position: relative;
 
