updated with wingdings 3

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,10 +2,10 @@
 <div>
   <section class="grid-container">
   <h1 class="header">
-    Welcome to {{ title }}!
+    Best to use Chrome
   </h1>
 
-  <ul class="nav">
+  <ul class="navigation">
     <li><a routerLink="/home">Home</a></li>
     <li><a routerLink="/regions">Regions Picker</a></li>
     <li><a routerLink="/items">Items Hub Pricing</a></li>
