--- a/src/app/develop/develop.component.html
+++ b/src/app/develop/develop.component.html
@@ -1,3 +1,4 @@
+<div> Developer reference</div>
 <div>
   <ul>
   <li><a href="https://angular.io/" target="_blank">Angular</a> </li>
@@ -6,8 +7,23 @@
 
     <li><a href="https://stackblitz.com/">stack blitz (place for samples)</a></li>
     <li>Interesting Notes</li>
-<li <a href="https://www.thepolyglotdeveloper.com/2017/03/javascript-libraries-in-a-typescript-application-revisited/">  reference javascript libraries with ts</li>
+    <li> <a href="https://www.thepolyglotdeveloper.com/2017/03/javascript-libraries-in-a-typescript-application-revisited/">  reference javascript libraries with ts</a></li>
 
 </ul>
 </div>
-
+<br>
+<div>
+  <table class="center">
+    <tr class="alpha"><td style="margin-right: 5px">lower case</td><td>a</td> <td>b</td> <td>c</td> <td>d</td> <td>e</td> <td>f</td> <td>g</td> <td>h</td> <td>i</td> <td>j</td> <td>k</td> <td>l</td> <td>m</td> <td>n</td> <td>o</td> <td>p</td> <td>q</td> <td>r</td> <td>s</td> <td>t</td> <td>u</td> <td>v</td> <td>w</td> <td>x</td> <td>y</td> <td>z</td></tr>
+    <tr style="font-family: 'Wingdings'"><td style="font-family: sans-serif; margin-right: 5px">wingdings</td><td>a</td> <td>b</td> <td>c</td> <td>d</td> <td>e</td> <td>f</td> <td>g</td> <td>h</td> <td>i</td> <td>j</td> <td>k</td> <td>l</td> <td>m</td> <td>n</td> <td>o</td> <td>p</td> <td>q</td> <td>r</td> <td>s</td> <td>t</td> <td>u</td> <td>v</td> <td>w</td> <td>x</td> <td>y</td> <td>z</td></tr>
+    <tr style="font-family: 'Wingdings 2'"><td style="font-family: sans-serif; margin-right: 5px">wingdings 2</td><td>a</td> <td>b</td> <td>c</td> <td>d</td> <td>e</td> <td>f</td> <td>g</td> <td>h</td> <td>i</td> <td>j</td> <td>k</td> <td>l</td> <td>m</td> <td>n</td> <td>o</td> <td>p</td> <td>q</td> <td>r</td> <td>s</td> <td>t</td> <td>u</td> <td>v</td> <td>w</td> <td>x</td> <td>y</td> <td>z</td></tr>
+    <tr style="font-family: 'Wingdings 3'"><td style="font-family: sans-serif; margin-right: 5px">wingdings 3</td><td>a</td> <td>b</td> <td>c</td> <td>d</td> <td>e</td> <td>f</td> <td>g</td> <td>h</td> <td>i</td> <td>j</td> <td>k</td> <td>l</td> <td>m</td> <td>n</td> <td>o</td> <td>p</td> <td>q</td> <td>r</td> <td>s</td> <td>t</td> <td>u</td> <td>v</td> <td>w</td> <td>x</td> <td>y</td> <td>z</td></tr>
+  </table>
+<br>
+  <table class="center">
+    <tr class="alpha"><td>upper case</td><td>A</td> <td>B</td> <td>C</td> <td>D</td> <td>E</td> <td>F</td> <td>G</td> <td>H</td> <td>I</td> <td>J</td> <td>K</td> <td>L</td> <td>M</td> <td>N</td> <td>O</td> <td>P</td> <td>Q</td> <td>R</td> <td>S</td> <td>T</td> <td>U</td> <td>V</td> <td>W</td> <td>X</td> <td>Y</td> <td>Z</td></tr>
+    <tr style="font-family: 'Wingdings'"><td style="font-family: sans-serif">wingdings</td><td>A</td> <td>B</td> <td>C</td> <td>D</td> <td>E</td> <td>F</td> <td>G</td> <td>H</td> <td>I</td> <td>J</td> <td>K</td> <td>L</td> <td>M</td> <td>N</td> <td>O</td> <td>P</td> <td>Q</td> <td>R</td> <td>S</td> <td>T</td> <td>U</td> <td>V</td> <td>W</td> <td>X</td> <td>Y</td> <td>Z</td></tr>
+    <tr style="font-family: 'Wingdings 2'"><td style="font-family: sans-serif">wingdings 2</td><td>A</td> <td>B</td> <td>C</td> <td>D</td> <td>E</td> <td>F</td> <td>G</td> <td>H</td> <td>I</td> <td>J</td> <td>K</td> <td>L</td> <td>M</td> <td>N</td> <td>O</td> <td>P</td> <td>Q</td> <td>R</td> <td>S</td> <td>T</td> <td>U</td> <td>V</td> <td>W</td> <td>X</td> <td>Y</td> <td>Z</td></tr>
+    <tr style="font-family: 'Wingdings 3'"><td style="font-family: sans-serif">wingdings 3</td><td>A</td> <td>B</td> <td>C</td> <td>D</td> <td>E</td> <td>F</td> <td>G</td> <td>H</td> <td>I</td> <td>J</td> <td>K</td> <td>L</td> <td>M</td> <td>N</td> <td>O</td> <td>P</td> <td>Q</td> <td>R</td> <td>S</td> <td>T</td> <td>U</td> <td>V</td> <td>W</td> <td>X</td> <td>Y</td> <td>Z</td></tr>
+  </table>
+</div>
