--- a/src/app/items-by-group/items-by-group.component.html
+++ b/src/app/items-by-group/items-by-group.component.html
@@ -66,7 +66,7 @@
       </tr>
       <tr  *ngFor="let it of tradeItemPriceList" [class.itemselected]="it === selectedItem" (click)="onRemoveItem(it)">
 
-        <td class="image"> <img src = "https://imageserver.eveonline.com/Type/{{it.item.type_id}}_32.png" class="image">  </td>
+        <td class="image"> <img id="img" src = "https://imageserver.eveonline.com/Type/{{it.item.type_id}}_32.png" class="image">  </td>
         <td> {{ it.item.name }} </td>
         <td class="makeroom">  </td>
         <td class="bomtext" alt="bom"> <img src="assets/images/bom.png" alt="bom"> </td>
@@ -84,5 +84,18 @@
            <td class="price">{{it.Ourprice | moneyPipe}} </td>-->
       </tr>
     </table>
+    <ul *ngIf="selType != null" class="ulist">
+      <li>{{selType.description}}</li>
+      <li>capacity: {{selType.capacity}}</li>
+<!--
+      <li>{{selType.dogma_attributes | json}}</li>
+      <li>{{selType.dogma_effects | json}}</li>
+-->
+      <li>mass: {{selType.mass}}</li>
+      <li>radius: {{selType.radius}}</li>
+      <li>volume: {{selType.volume}}</li>
+      <li>packaged volume: {{selType.packaged_volume}}</li>
+      <li>published: {{selType.published}}</li>
+    </ul>
   </div>
 </div>
