--- a/src/styles.css
+++ b/src/styles.css
@@ -4,25 +4,19 @@ body{
   color: lightgrey;
 }
 
-ul{
-  background-color: #1d2528;
-  color: lightgrey;
-  list-style-type: none;
-  text-align: left;
-}
-
 
 a{
   color: gold;
 }
 ul{
-  color: lightgreen;
+  list-style-type: none;
+  background-color: #1d2528;
   margin: 0;
   padding: 0;
   border: 0;
 }
 ul li{
-  color: lightgreen;
+
   font-size: small;
 }
 
@@ -40,7 +34,7 @@ ul li{
 }
 .grid-container{
   display: grid;
-  grid-template-rows: [head] 40px [nav] 40px [main] 85% [foot] 40px;
+  grid-template-rows: [head] 60px [nav] auto [main] 85% [foot] 40px;
 }
 
 .grid-content{
@@ -71,9 +65,34 @@ ul li{
   grid-column: 2;
 
 }
-.itemsByType{
-  grid-column: 3;
-}
+
 .itemsByPrice{
-  grid-column: 4/span 2;
+  grid-column: 3/span 3;
+}
+
+.navigation  li{ float: left; margin: 0px 2px 0px 4px}
+/* Large */
+.navigation {
+
+  grid-row: nav;
+  display: flex;
+  flex-flow: row wrap;
+  /* This aligns items to the end line on main-axis */
+  justify-content: flex-start;
+}
+
+/* Medium screens */
+@media all and (max-width: 800px) {
+  .navigation {
+    /* When on medium sized screens, we center it by evenly distributing empty space around items */
+    justify-content: space-around;
+  }
+}
+
+/* Small screens */
+@media all and (max-width: 400px) {
+  .navigation {
+    /* On small screens, we are no longer using row direction but column */
+    flex-direction: column;
+  }
 }
