updated dev links

--- a/src/app/develop/develop.component.html
+++ b/src/app/develop/develop.component.html
@@ -2,10 +2,15 @@
 <div>
   <ul>
   <li><a href="https://angular.io/" target="_blank">Angular</a> </li>
+    <li><a href="https://tour.golang.org/list">tour of GO</a></li>
   <li><a href="https://esi.tech.ccp.is/ui/" target="_blank"> ESI </a></li>
     <li><a href="http://json2ts.com/" target="_blank"> json to typescript </a></li>
-
+    <li><a href="http://json2struct.mervine.net/">json to struct (GO Lang)</a></li>
     <li><a href="https://stackblitz.com/">stack blitz (place for samples)</a></li>
+    <li><a href="https://www.gitbook.com/book/drboolean/mostly-adequate-guide-old/details">Mostly Adequate</a></li>
+
+    <li><a href="https://material.angular.io">Angular Material </a></li>
+
     <li>Interesting Notes</li>
     <li> <a href="https://www.thepolyglotdeveloper.com/2017/03/javascript-libraries-in-a-typescript-application-revisited/">  reference javascript libraries with ts</a></li>
 
