--- a/src/app/develop/develop.component.html
+++ b/src/app/develop/develop.component.html
@@ -11,9 +11,12 @@
 
     <li><a href="https://material.angular.io">Angular Material </a></li>
 
-    <li>Interesting Notes</li>
+    <li><h2>Interesting Notes</h2></li>
     <li> <a href="https://www.thepolyglotdeveloper.com/2017/03/javascript-libraries-in-a-typescript-application-revisited/">  reference javascript libraries with ts</a></li>
 
+    <li> <h2>Sharing</h2></li>
+    <li><a href="http://www.tightvnc.com/download.php">tight vnc free</a></li>
+    <li><a href="http://www.slack.com">slack</a></li>
 </ul>
 </div>
 <br>
